--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,7 +75,7 @@ dependencies {
     implementation "androidx.activity:activity-compose:1.8.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.7.0-alpha02"
 
-// Clipboard manager
+    // Clipboard manager
     implementation 'androidx.core:core-ktx:1.12.0'
 
     def nav_version = "2.6.0"
@@ -89,6 +89,13 @@ dependencies {
 
     // When using the BoM, don't specify versions in Firebase dependencies
     implementation("com.google.firebase:firebase-analytics-ktx")
+    implementation("com.google.firebase:firebase-storage-ktx")
+    implementation 'com.google.firebase:firebase-database:20.0.0'
+
+    //
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.19.0"
+
+
 
 
 
